[gd_scene load_steps=14 format=2]

[ext_resource path="res://Interface/Themes/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Title Screen/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://Fonts/roboto_68.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/roboto_50.tres" type="DynamicFont" id=4]
[ext_resource path="res://Title Screen/Lobby.gd" type="Script" id=5]
[ext_resource path="res://Interface/Lobby Buttons/join.png" type="Texture" id=6]
[ext_resource path="res://Interface/Lobby Buttons/join-pressed.png" type="Texture" id=7]
[ext_resource path="res://Interface/Lobby Buttons/create.png" type="Texture" id=8]
[ext_resource path="res://Interface/Lobby Buttons/create-pressed.png" type="Texture" id=9]
[ext_resource path="res://Title Screen/MultiplayerMenu.gd" type="Script" id=10]
[ext_resource path="res://Title Screen/SettingsMenu.gd" type="Script" id=11]
[ext_resource path="res://Fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 12 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [  ]
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -840.0
margin_top = -460.0
margin_right = 840.0
margin_bottom = 460.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_right = 1680.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_constants/shadow_offset_y = 5
text = "CONFRONTATION"
align = 1

[node name="Buttons" type="VBoxContainer" parent="Menu"]
margin_top = 85.0
margin_right = 1680.0
margin_bottom = 639.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="SinglePlayer" type="Button" parent="Menu/Buttons"]
margin_right = 1680.0
margin_bottom = 94.0
rect_min_size = Vector2( 360, 60 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Single Player"

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/Buttons"]
margin_top = 114.0
margin_right = 1680.0
margin_bottom = 208.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Multiplayer" type="Button" parent="Menu/Buttons/HBoxContainer"]
margin_right = 830.0
margin_bottom = 94.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Multiplayer (Testing)"

[node name="OnlinePlay" type="Button" parent="Menu/Buttons/HBoxContainer"]
margin_left = 850.0
margin_right = 1680.0
margin_bottom = 94.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Online Play (Testing)"

[node name="Settings" type="Button" parent="Menu/Buttons"]
margin_top = 228.0
margin_right = 1680.0
margin_bottom = 322.0
rect_min_size = Vector2( 360, 60 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Settings"

[node name="Profile" type="Button" parent="Menu/Buttons"]
margin_top = 342.0
margin_right = 1680.0
margin_bottom = 436.0
rect_min_size = Vector2( 360, 60 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Profile (Not Ready)"

[node name="Quit" type="Button" parent="Menu/Buttons"]
margin_top = 456.0
margin_right = 1680.0
margin_bottom = 554.0
rect_min_size = Vector2( 360, 60 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Quit"

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 643.0
margin_right = 1680.0
margin_bottom = 920.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Credits:
-Music & Sounds: Gustav Holst
-Textures: CC0 Textures
-Engine: Godot Engine (godotengine.org/license)

Version 0.1.6 Alpha - Multiplayer
Vora Game Studios / Aleix R. B."
valign = 2

[node name="Lobby" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Lobby"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -320.0
margin_right = 400.0
margin_bottom = 141.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Lobby/VBoxContainer"]
margin_right = 800.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 3 )
text = "Lobby"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Lobby/VBoxContainer"]
margin_top = 111.0
margin_right = 800.0
margin_bottom = 177.0
custom_constants/separation = 35

[node name="Label" type="Label" parent="Lobby/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 256.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 4 )
text = "Your name:"

[node name="NameLine" type="LineEdit" parent="Lobby/VBoxContainer/HBoxContainer"]
margin_left = 291.0
margin_right = 800.0
margin_bottom = 66.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
align = 1
max_length = 12

[node name="HBoxContainer2" type="HBoxContainer" parent="Lobby/VBoxContainer"]
margin_top = 207.0
margin_right = 800.0
margin_bottom = 273.0
custom_constants/separation = 35

[node name="Label" type="Label" parent="Lobby/VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 227.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 4 )
text = "IP to Join:"

[node name="IPLine" type="LineEdit" parent="Lobby/VBoxContainer/HBoxContainer2"]
margin_left = 262.0
margin_right = 800.0
margin_bottom = 66.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
align = 1
max_length = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="Lobby/VBoxContainer"]
margin_top = 303.0
margin_right = 800.0
margin_bottom = 461.0
size_flags_vertical = 3
custom_constants/separation = 75

[node name="JoinButton" type="TextureButton" parent="Lobby/VBoxContainer/HBoxContainer3"]
margin_right = 362.0
margin_bottom = 158.0
size_flags_horizontal = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="CreateButton" type="TextureButton" parent="Lobby/VBoxContainer/HBoxContainer3"]
margin_left = 437.0
margin_right = 800.0
margin_bottom = 158.0
size_flags_horizontal = 3
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Back" type="Button" parent="Lobby"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -460.0
margin_top = -168.0
margin_right = -100.0
margin_bottom = -100.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Back"

[node name="WaitTimer" type="Timer" parent="Lobby"]
wait_time = 10.0
one_shot = true

[node name="MultiplayerMenu" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.85059
margin_right = -1.85059
script = ExtResource( 10 )

[node name="Back" type="Button" parent="MultiplayerMenu"]
margin_left = 1453.04
margin_top = 875.0
margin_right = 1766.04
margin_bottom = 963.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Back"

[node name="Play" type="Button" parent="MultiplayerMenu"]
margin_left = 1453.04
margin_top = 625.0
margin_right = 1766.04
margin_bottom = 713.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "Play"

[node name="OnlinePlay" type="Button" parent="MultiplayerMenu"]
margin_left = 1453.04
margin_top = 750.0
margin_right = 1766.04
margin_bottom = 838.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "Online Play"

[node name="HBoxContainer" type="HBoxContainer" parent="MultiplayerMenu"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -159.87
margin_right = 315.0
margin_bottom = 470.13

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerMenu/HBoxContainer"]
editor/display_folded = true
margin_right = 313.0
margin_bottom = 630.0
size_flags_horizontal = 3

[node name="1Player" type="Label" parent="MultiplayerMenu/HBoxContainer/VBoxContainer"]
margin_right = 313.0
margin_bottom = 313.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1P"
align = 1
valign = 1

[node name="3Player" type="Label" parent="MultiplayerMenu/HBoxContainer/VBoxContainer"]
margin_top = 317.0
margin_right = 313.0
margin_bottom = 630.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3P"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MultiplayerMenu/HBoxContainer"]
editor/display_folded = true
margin_left = 317.0
margin_right = 630.0
margin_bottom = 630.0
size_flags_horizontal = 3

[node name="2Player" type="Label" parent="MultiplayerMenu/HBoxContainer/VBoxContainer2"]
margin_right = 313.0
margin_bottom = 313.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2P"
align = 1
valign = 1

[node name="4Player" type="Label" parent="MultiplayerMenu/HBoxContainer/VBoxContainer2"]
margin_top = 317.0
margin_right = 313.0
margin_bottom = 630.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4P"
align = 1
valign = 1

[node name="Label2" type="Label" parent="MultiplayerMenu"]
margin_left = 122.0
margin_top = 80.0
margin_right = 1802.0
margin_bottom = 161.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_constants/shadow_offset_y = 5
text = "MULTIPLAYER"
align = 1

[node name="Label3" type="Label" parent="MultiplayerMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -889.0
margin_top = -285.0
margin_right = 889.0
margin_bottom = -158.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_constants/shadow_offset_y = 5
text = "PRESS Z ON THE KEYBOARD 
OR START ON THE CONTROLLER"
align = 1

[node name="SettingsMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Back" type="Button" parent="SettingsMenu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -460.0
margin_top = -168.0
margin_right = -100.0
margin_bottom = -100.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Back"

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -353.5
margin_top = -346.5
margin_right = 353.5
margin_bottom = 246.5
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/ScrollContainer"]
margin_right = 707.0
margin_bottom = 573.0
size_flags_horizontal = 3
custom_constants/separation = 75
script = ExtResource( 11 )

[node name="Graphics" type="VBoxContainer" parent="SettingsMenu/ScrollContainer/VBoxContainer"]
editor/display_folded = true
margin_right = 707.0
margin_bottom = 117.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="SettingsMenu/ScrollContainer/VBoxContainer/Graphics"]
margin_right = 707.0
margin_bottom = 29.0
text = "Graphics"
align = 1

[node name="Buttons" type="HBoxContainer" parent="SettingsMenu/ScrollContainer/VBoxContainer/Graphics"]
editor/display_folded = true
margin_top = 49.0
margin_right = 707.0
margin_bottom = 117.0
custom_constants/separation = 35

[node name="ButtonLow" type="Button" parent="SettingsMenu/ScrollContainer/VBoxContainer/Graphics/Buttons"]
margin_right = 202.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "LOW"

[node name="ButtonMiddle" type="Button" parent="SettingsMenu/ScrollContainer/VBoxContainer/Graphics/Buttons"]
margin_left = 237.0
margin_right = 470.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "MEDIUM"

[node name="ButtonHigh" type="Button" parent="SettingsMenu/ScrollContainer/VBoxContainer/Graphics/Buttons"]
margin_left = 505.0
margin_right = 707.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "HIGH"

[node name="Controls" type="VBoxContainer" parent="SettingsMenu/ScrollContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 707.0
margin_bottom = 361.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="SettingsMenu/ScrollContainer/VBoxContainer/Controls"]
margin_right = 707.0
margin_bottom = 29.0
text = "Controls"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/ScrollContainer/VBoxContainer/Controls"]
editor/display_folded = true
margin_top = 49.0
margin_right = 707.0
margin_bottom = 78.0

[node name="Label" type="Label" parent="SettingsMenu/ScrollContainer/VBoxContainer/Controls/HBoxContainer"]
margin_right = 351.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Mouse Speed"
align = 1

[node name="Label2" type="Label" parent="SettingsMenu/ScrollContainer/VBoxContainer/Controls/HBoxContainer"]
margin_left = 355.0
margin_right = 707.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Joystick Speed"
align = 1

[node name="Sliders" type="HBoxContainer" parent="SettingsMenu/ScrollContainer/VBoxContainer/Controls"]
margin_top = 98.0
margin_right = 707.0
margin_bottom = 114.0

[node name="HSliderMouse" type="HSlider" parent="SettingsMenu/ScrollContainer/VBoxContainer/Controls/Sliders"]
margin_right = 351.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 20.0
max_value = 200.0
value = 100.0
ticks_on_borders = true

[node name="HSliderJoystick" type="HSlider" parent="SettingsMenu/ScrollContainer/VBoxContainer/Controls/Sliders"]
margin_left = 355.0
margin_right = 707.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 20.0
max_value = 200.0
value = 100.0
ticks_on_borders = true

[node name="SensitivityDefaultsButton" type="Button" parent="SettingsMenu/ScrollContainer/VBoxContainer/Controls"]
margin_top = 134.0
margin_right = 707.0
margin_bottom = 169.0
text = "RESTORE DEFAULT SETTINGS"

[node name="Others" type="VBoxContainer" parent="SettingsMenu/ScrollContainer/VBoxContainer"]
margin_top = 436.0
margin_right = 707.0
margin_bottom = 575.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="SettingsMenu/ScrollContainer/VBoxContainer/Others"]
margin_right = 707.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Field of View"
align = 1

[node name="SpinBox" type="SpinBox" parent="SettingsMenu/ScrollContainer/VBoxContainer/Others"]
margin_left = 306.0
margin_top = 49.0
margin_right = 400.0
margin_bottom = 84.0
size_flags_horizontal = 4
min_value = 45.0
max_value = 110.0
value = 70.0
align = 1

[node name="FovDefaultsButton" type="Button" parent="SettingsMenu/ScrollContainer/VBoxContainer/Others"]
margin_top = 104.0
margin_right = 707.0
margin_bottom = 139.0
text = "RESTORE DEFAULT SETTINGS"

[node name="LoadingScreen" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SinglePlayer" type="Label" parent="LoadingScreen"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -459.0
margin_top = -42.0
margin_right = 459.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 3 )
text = "LOADING INSTANT ACTION..."

[node name="Multiplayer" type="Label" parent="LoadingScreen"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -537.5
margin_top = -42.0
margin_right = 537.5
margin_bottom = 42.0
custom_fonts/font = ExtResource( 3 )
text = "CONNECTING TO THE NETWORK..."
[connection signal="pressed" from="Menu/Buttons/SinglePlayer" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/Buttons/HBoxContainer/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="Menu/Buttons/HBoxContainer/OnlinePlay" to="." method="_on_OnlinePlay_pressed"]
[connection signal="pressed" from="Menu/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="text_changed" from="Lobby/VBoxContainer/HBoxContainer/NameLine" to="Lobby" method="_on_NameLine_text_changed"]
[connection signal="text_changed" from="Lobby/VBoxContainer/HBoxContainer2/IPLine" to="Lobby" method="_on_IPLine_text_changed"]
[connection signal="pressed" from="Lobby/VBoxContainer/HBoxContainer3/JoinButton" to="Lobby" method="_on_JoinButton_pressed"]
[connection signal="pressed" from="Lobby/VBoxContainer/HBoxContainer3/CreateButton" to="Lobby" method="_on_CreateButton_pressed"]
[connection signal="pressed" from="Lobby/Back" to="." method="_on_MultiplayerBack_pressed"]
[connection signal="pressed" from="Lobby/Back" to="." method="_on_Back_pressed"]
[connection signal="timeout" from="Lobby/WaitTimer" to="Lobby" method="_on_WaitTimer_timeout"]
[connection signal="pressed" from="MultiplayerMenu/Back" to="." method="_on_MultiplayerBack_pressed"]
[connection signal="pressed" from="MultiplayerMenu/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MultiplayerMenu/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MultiplayerMenu/OnlinePlay" to="." method="_on_OnlinePlay_pressed"]
[connection signal="pressed" from="SettingsMenu/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="SettingsMenu/ScrollContainer/VBoxContainer/Graphics/Buttons/ButtonLow" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_GraphicsButton_pressed" binds= [ 0 ]]
[connection signal="pressed" from="SettingsMenu/ScrollContainer/VBoxContainer/Graphics/Buttons/ButtonMiddle" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_GraphicsButton_pressed" binds= [ 1 ]]
[connection signal="pressed" from="SettingsMenu/ScrollContainer/VBoxContainer/Graphics/Buttons/ButtonHigh" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_GraphicsButton_pressed" binds= [ 2 ]]
[connection signal="value_changed" from="SettingsMenu/ScrollContainer/VBoxContainer/Controls/Sliders/HSliderMouse" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_HSliderMouse_value_changed"]
[connection signal="value_changed" from="SettingsMenu/ScrollContainer/VBoxContainer/Controls/Sliders/HSliderJoystick" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_HSliderJoystick_value_changed"]
[connection signal="pressed" from="SettingsMenu/ScrollContainer/VBoxContainer/Controls/SensitivityDefaultsButton" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_SensitivityDefaultsButton_pressed"]
[connection signal="value_changed" from="SettingsMenu/ScrollContainer/VBoxContainer/Others/SpinBox" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="SettingsMenu/ScrollContainer/VBoxContainer/Others/FovDefaultsButton" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_FovDefaultsButton_pressed"]
